# youtun4

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  README.md  REFACTOR_PLAN.md  SECURITY.md  Trunk.toml  deny.toml  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  tarpaulin.toml
.automaker/: app_spec.txt  categories.json  execution-state.json  notifications.json
.automaker/events/: evt-1769531566781-1a1eaea6.json  evt-1769532725809-45314a55.json  evt-1769533590858-495c9a48.json  evt-1769533791992-ef427860.json  evt-1769611351941-2458c9a6.json  evt-1769611356008-cbd86ce2.json  evt-1769611356908-10d5e2c9.json  evt-1769611357646-6e811e6a.json  evt-1769611358672-542b3d58.json  evt-1769611707488-38463e99.json  index.json
.automaker/features/15e72062-7ff3-4d80-a374-458fca73b890/: agent-output.md  feature.json  feature.json.bak1  feature.json.bak2  feature.json.bak3
.automaker/memory/: gotchas.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  security.yml
crates/mp3youtube-core/: Cargo.toml
crates/mp3youtube-core/src/: cache.rs  cleanup.rs  config.rs  device.rs  error.rs  fs.rs  integrity.rs  lib.rs  metadata.rs  playlist.rs  queue.rs  sync.rs  thumbnail.rs  transfer.rs  youtube.rs
crates/mp3youtube-core/tests/: integration_tests.rs  mount_handler_integration.rs  youtube_tests.rs
crates/mp3youtube-ui/: Cargo.toml  index.html
crates/mp3youtube-ui/src/: app.rs  lib.rs  main.rs  tauri_api.rs  theme.rs  types.rs
crates/mp3youtube-ui/src/components/: button.rs  confirm_dialog.rs  create_playlist_dialog.rs  device_list.rs  device_status_indicator.rs  download_progress_panel.rs  empty_state.rs  header.rs  layout.rs  mod.rs  navigation.rs  playlist_card.rs  playlist_detail.rs  playlist_selection.rs  sync_button.rs  toast.rs  track_list.rs  transfer_progress_panel.rs
crates/mp3youtube-ui/styles/: main.css
crates/youtun4-core/: Cargo.toml
crates/youtun4-core/mp3youtube-core/: Cargo.toml
crates/youtun4-core/src/: cache.rs  cleanup.rs  config.rs  device.rs  error.rs  fs.rs  integrity.rs  lib.rs  metadata.rs  playlist.rs  queue.rs  sync.rs  thumbnail.rs  transfer.rs  youtube.rs
crates/youtun4-core/tests/: integration_tests.rs  mount_handler_integration.rs  youtube_tests.rs
crates/youtun4-ui/: index.html
crates/youtun4-ui/mp3youtube-ui/: Cargo.toml
crates/youtun4-ui/src/: app.rs  lib.rs  main.rs  tauri_api.rs  theme.rs  types.rs
crates/youtun4-ui/src/components/: button.rs  device_list.rs  device_status_indicator.rs  empty_state.rs  header.rs  layout.rs  loading.rs  mod.rs  playlist_card.rs  playlist_list.rs  playlist_selection.rs  settings_panel.rs
crates/youtun4-ui/styles/: main.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  logging.rs  main.rs  runtime.rs
src-tauri/src/commands/: cache.rs  config.rs  device.rs  device_cleanup.rs  device_mount.rs  device_watcher.rs  error.rs  integrity.rs  mod.rs  playlist.rs  queue.rs  state.rs  sync.rs  sync_orchestrator.rs  task.rs  transfer.rs  youtube.rs
supply-chain/: config.toml
tests/: device-management.spec.ts  fixtures.ts  navigation-layout.spec.ts  notifications.spec.ts  playlist-creation.spec.ts  playlist-sync.spec.ts  settings-panel.spec.ts
