[package]
name = "youtun4"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Desktop/mobile app for managing MP4 playlists from YouTube"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
dirs.workspace = true
youtun4-core.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints]
workspace = true
