[package]
name = "youtun4-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Leptos-based UI for Youtun4"

[lib]
crate-type = ["cdylib", "rlib"]

# The binary is WASM-only - use `trunk build` or `cargo build --target wasm32-unknown-unknown`
[[bin]]
name = "youtun4-ui"
path = "src/main.rs"
required-features = ["_wasm_bin"]

[features]
_wasm_bin = []

[dependencies]
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true
web-sys.workspace = true
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]

[lints]
workspace = true
